--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
+    "Android":">4.1",
+    "last 5 versions",
     "not ie <= 8"
   ]
 }
